home slider wt slick

--- a/my-app/src/assets/project_articles.json
+++ b/my-app/src/assets/project_articles.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "A1",
-    "display": "disable",
+    "display": "enable",
     "title": "Nouveau tableau",
     "paragraph": [
       {
