--- a/my-app/src/assets/project_articles.json
+++ b/my-app/src/assets/project_articles.json
@@ -3,7 +3,7 @@
     "id": "A2",
     "display": "enable",
     "title": "Page en construction",
-    "paragraph": [],
-    "image": {}
+    "text": [],
+    "images": []
   }
 ]
