--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "eslint-plugin-risxss": "^2.1.0",
+    "html-react-parser": "^3.0.13",
     "install": "^0.13.0",
     "npm": "^9.1.1",
     "react": "^18.2.0",
