--- a/my-app/src/assets/project_articles.json
+++ b/my-app/src/assets/project_articles.json
@@ -14,7 +14,14 @@
       }
     ],
     "link": "",
-    "images": []
+    "images": [
+      {
+        "id": "A1I1",
+        "title": "Autel-tombeau",
+        "alt": "Autel-tombeau",
+        "url": "/autel.jpg"
+      }
+    ]
   },
   {
     "id": "A2",
