--- a/my-app/src/assets/project_articles.json
+++ b/my-app/src/assets/project_articles.json
@@ -50,11 +50,11 @@
       },
       {
         "id": "A2P6",
-        "paragraph": "Ce chemin de croix exclusif et unique pour l'église de la Jarrie bénéficiera de l'art et de l'enseignement désintéressé de Jean-Dominique Leguay."
+        "paragraph": "Ce chemin de croix exclusif et unique pour l'église de la Jarrie bénéficiera de l'art et de l'enseignement désintéressé de Jean-Dominique Elpadre."
       },
       {
         "id": "A2P7",
-        "paragraph": "La réalisation matérielle de l'oeuvre photographique, mise en scène, développement, tirages, l'encadrement et protection sera supportée par l'Association des Amis de Sainte Madeleine de la Jarrie dont les dons reçus et le recours au crowdfunding devra financer la totalité de l'acquisition de l'oeuvre auprès de Photophore-Association, par laquelle Jean-Dominique Leguay, photographe, cherche à développer et aider à la création artistique par la photographie."
+        "paragraph": "La réalisation matérielle de l'oeuvre photographique, mise en scène, développement, tirages, l'encadrement et protection sera supportée par l'Association des Amis de Sainte Madeleine de la Jarrie dont les dons reçus et le recours au crowdfunding devra financer la totalité de l'acquisition de l'oeuvre auprès de Photophore-Association, par laquelle Jean-Dominique Elpadre, photographe, cherche à développer et aider à la création artistique par la photographie."
       },
       {
         "id": "A2P8",
