--- a/my-app/public/.env
+++ b/my-app/public/.env
@@ -1,3 +1,3 @@
 /*.env*/
-REACT_APP_SECRET_KEY = "6Le1OMMlAAAAAHhHsAGCy-SVl8Ru0fPn7mqtvpve"
-REACT_APP_SITE_KEY = "6Le1OMMlAAAAANYwDmnFGkIkhmVOPt2S5gZDEoZb"
+SITE_RECAPTCHA_SECRET = "6LdpyjonAAAAAOht0EdGCHKF-dSgpKMarYTknQJE"
+SITE_RECAPTCHA_KEY = "6LdpyjonAAAAAAILGIfHzgcy6aQyLy3e9oyULUF4"
