--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
