--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-side-effect": "^2.1.2",
     "sass": "^1.56.1",
+    "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
