small css and json modifications

--- a/my-app/src/assets/project_sections.json
+++ b/my-app/src/assets/project_sections.json
@@ -6,7 +6,7 @@
     "text": [
       {
         "id": "S1P1",
-        "paragraph": "<p>Un autel tombeau qui a subi des détériorations et des manques est installé dans une des absidioles. Cet autel du XVIIème s., très probablement vers 1765, a incontestablement été réalisé par des artisans doués comme tend à le prouver sa facture qui tranche avec un mobilier ordinaire d’une église paroissiale.</br></br>Ce meuble mérite une restauration et la reconstitution des pièces manquantes notamment une terrasse supportant le tabernacle détérioré.</p>"
+        "paragraph": "<p>Un autel tombeau qui a subi des détériorations et des manques est installé dans une des absidioles. Cet autel du XVIIème s., très probablement vers 1765, a incontestablement été réalisé par des artisans doués comme tend à le prouver sa facture qui tranche avec un mobilier ordinaire d’une église paroissiale.<br/><br/>Ce meuble mérite une restauration et la reconstitution des pièces manquantes notamment une terrasse supportant le tabernacle détérioré.</p>"
       }
     ],
     "images": [
