Text & photos modifications

--- a/my-app/src/assets/project_sections.json
+++ b/my-app/src/assets/project_sections.json
@@ -51,7 +51,7 @@
         "id": "S2I2",
         "title": "2ème station",
         "alt": "2ème station",
-        "url": ""
+        "url": "/projects/CDC2.jpg"
       },
       {
         "id": "S2I3",
@@ -63,19 +63,19 @@
         "id": "S2I4",
         "title": "4ème station",
         "alt": "4ème station",
-        "url": ""
+        "url": "/projects/CDC4.jpg"
       },
       {
         "id": "S2I5",
         "title": "5ème station",
         "alt": "5ème station",
-        "url": ""
+        "url": "/projects/CDC5.jpg"
       },
       {
         "id": "S2I6",
         "title": "6ème station",
         "alt": "6ème station",
-        "url": ""
+        "url": "/projects/CDC6.jpg"
       },
       {
         "id": "S2I7",
@@ -87,49 +87,49 @@
         "id": "S2I8",
         "title": "8ème station",
         "alt": "Des femmes revenant de l’école avec leurs enfants ou rentrant de  faire leurs courses croisent le Christ et les console.",
-        "url": ""
+        "url": "/projects/CDC8.jpg"
       },
       {
         "id": "S2I9",
         "title": "9ème station",
         "alt": "Jésus tombe pour la 3e fois. Un gendarme croise Jésus au sol écrasé par le poids de la Croix et alerte ses collègues par téléphone.",
-        "url": ""
+        "url": "/projects/CDC9.jpg"
       },
       {
         "id": "S2I10",
         "title": "10ème station",
         "alt": "10ème station",
-        "url": ""
+        "url": "/projects/CDC10.jpg"
       },
       {
         "id": "S2I11",
         "title": "11ème station",
         "alt": "11ème station",
-        "url": ""
+        "url": "/projects/CDC11.jpg"
       },
       {
         "id": "S2I12",
         "title": "12ème station",
         "alt": "12ème station",
-        "url": ""
+        "url": "/projects/CDC12.jpg"
       },
       {
         "id": "S2I13",
         "title": "13ème station",
         "alt": "Jésus est descendu de la croix et remis à sa mère. Un échafaudage est dressé, un jeune homme et un adulte reçoivent le corps devant Marie.",
-        "url": ""
+        "url": "/projects/CDC13.jpg"
       },
       {
         "id": "S2I14",
         "title": "14ème station",
         "alt": "Jésus est mis dans le sépulcre. Le corps repose sur une table recouverte d’un drap blanc préfigurant l’hostie sur le drap liturgique de l’autel.",
-        "url": ""
+        "url": "/projects/CDC14.jpg"
       },
       {
         "id": "S2I15",
         "title": "15ème station",
         "alt": "La résurrection. Entre les deux soldats endormis, détachés par Pilate pour garder le tombeau, Jésus apparaît debout en Christ pantocrator.",
-        "url": ""
+        "url": "/projects/CDC15.jpg"
       }
     ]
   }
