--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,6 @@
     "npm": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.5",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
@@ -23,6 +22,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-side-effect": "^2.1.2",
+    "react-touch-drag-slider": "^2.2.6",
     "sass": "^1.56.1",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
