--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=api
+spring.datasource.url=jdbc:postgresql://db.eahwfewbtyndxbqfifuh.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=${SUPABASE_DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
