--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=api
-spring.datasource.url=jdbc:postgresql://db.eahwfewbtyndxbqfifuh.supabase.co:5432/postgres
-spring.datasource.username=postgres
+
+### SupaBase ###
+spring.datasource.url=${SUPABASE_DB_URL}
+spring.datasource.username=${SUPABASE_DB_USER}
 spring.datasource.password=${SUPABASE_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
