--- a/backend/api/Dockerfile
+++ b/backend/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY . .
-RUN mvn clean package -DskipTests
+RUN mvn clean package
 
 FROM openjdk:21-jdk-slim
 WORKDIR /app
