--- a/backend/api/src/main/resources/application-test.properties
+++ b/backend/api/src/main/resources/application-test.properties
@@ -1,8 +1,8 @@
-### H2 in-memory for tests ###
-spring.datasource.url=jdbc:h2:mem:stemadeleine_test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.flyway.enabled=false
