--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,11 @@ services:
     ports:
       - "3001:3000"
     environment:
-      REACT_APP_API_URL: http://localhost:8080
+      NEXT_PUBLIC_API_URL: http://backend:8080
     stdin_open: true
     tty: true
+    depends_on:
+      - backend
 
   db:
     image: postgres:16
