--- a/frontend/backoffice/Dockerfile
+++ b/frontend/backoffice/Dockerfile
@@ -1,11 +1,8 @@
-FROM node:20-alpine as build
+FROM node:20-alpine
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-COPY backoffice .
+COPY . .
 RUN npm run build
-
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx","-g","daemon off;"]
+EXPOSE 3000
+CMD ["npm", "start"]
