--- a/backend/api/src/main/resources/application-dev.properties
+++ b/backend/api/src/main/resources/application-dev.properties
@@ -1,7 +1,13 @@
-### SupaBase ###
+### SupaBase DB ###
 spring.datasource.url=jdbc:postgresql://localhost:5433/stemadeleine_dev
 spring.datasource.username=dev_user
 spring.datasource.password=dev_pass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+### SupaBase Bucket ###
+S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
+S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
+S3_BUCKET=${S3_BUCKET}
+S3_REGION=${S3_REGION}
+S3_ENDPOINT=${S3_ENDPOINT}
