--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.application.name=api
-
-### SupaBase ###
+### SupaBase DB ###
 spring.datasource.url=${SUPABASE_DB_URL}
 spring.datasource.username=${SUPABASE_DB_USER}
 spring.datasource.password=${SUPABASE_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Flyway
+### SupaBase Bucket ###
+S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
+S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
+S3_BUCKET=${S3_BUCKET}
+S3_REGION=${S3_REGION}
+S3_ENDPOINT=${S3_ENDPOINT}
+### Flyway ###
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
