--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: backend_api
     ports:
       - "8080:8080"
+    env_file:
+      - backend/api/.env.local
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/stemadeleine_dev
       SPRING_DATASOURCE_USERNAME: dev_user
