--- a/backend/api/.env.production
+++ b/backend/api/.env.production
@@ -7,4 +7,4 @@ S3_ENDPOINT=
 SUPABASE_URL=
 SUPABASE_SERVICE_KEY=
 
-JWT_SECRET_KEY=une_clé_très_longue_et_complexe_à_générer
+JWT_SECRET_KEY=K8Q#mP9$vL2^nX5@jR7&wZ4*hF1%yT6!cB3(gN0)sA4_eD8+uY5-xW2=bM6
