--- a/backend/api/src/main/resources/application-dev.properties
+++ b/backend/api/src/main/resources/application-dev.properties
@@ -11,3 +11,5 @@ S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
 S3_BUCKET=${S3_BUCKET}
 S3_REGION=${S3_REGION}
 S3_ENDPOINT=${S3_ENDPOINT}
+### JWT ###
+jwt.secret.key=${JWT_SECRET_KEY}
