--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.flyway.baseline-on-migrate=true
 ### Upload ###
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+### JWT ###
+JWT_SECRET_KEY=${JWT_SECRET_KEY}
