--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "concurrently": "^9.0.0",
+    "concurrently": "^8.2.2",
+    "emoji-regex": "^10.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12"
   }
