Adapting backoffice & api

--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=${SUPABASE_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+### SupaBase Storage ###
+supabase.storage.bucket=medias-prod
 ### SupaBase Bucket ###
 S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
 S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
