--- a/backend/api/src/main/resources/application-dev.properties
+++ b/backend/api/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ spring.datasource.password=dev_pass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+### SupaBase Storage ###
+supabase.storage.bucket=medias-dev
 ### SupaBase Bucket ###
 S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
 S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
