Adding Auth tests

--- a/backend/api/src/main/resources/application-dev.properties
+++ b/backend/api/src/main/resources/application-dev.properties
@@ -14,4 +14,5 @@ S3_BUCKET=${S3_BUCKET}
 S3_REGION=${S3_REGION}
 S3_ENDPOINT=${S3_ENDPOINT}
 ### JWT ###
-jwt.secret.key=${JWT_SECRET_KEY}
+jwt.secret=${JWT_SECRET_KEY}
+jwt.expiration=86400000
