--- a/backend/api/src/test/resources/application-test.properties
+++ b/backend/api/src/test/resources/application-test.properties
@@ -1,19 +1,22 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+# Configuration de test
+# Note: spring.profiles.active ne doit pas être défini dans un fichier spécifique au profil
+# Base de données en mémoire pour les tests
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# JPA/Hibernate pour les tests
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+# Flyway désactivé pour les tests
 spring.flyway.enabled=false
-### JWT ###
-JWT_SECRET_KEY=TEST_JWT_SECRET_KEY_FOR_TESTING_PURPOSES_ONLY_NOT_FOR_PRODUCTION
-### Mock Supabase ###
-SUPABASE_URL=http://localhost:9999
-SUPABASE_SERVICE_KEY=test-key
-S3_ACCESS_KEY_ID=test-access-key
-S3_SECRET_ACCESS_KEY=test-secret-key
-S3_BUCKET=test-bucket
-S3_REGION=test-region
-S3_ENDPOINT=http://localhost:9999/storage/v1/s3
+# JWT Configuration pour les tests (valeurs fixes pour éviter les références circulaires)
+JWT_SECRET_KEY=test-secret-key-for-unit-tests-that-is-long-enough-for-jwt-validation
+JWT_EXPIRATION_TIME=3600000
+# Logging
+logging.level.com.stemadeleine=DEBUG
+logging.level.org.springframework.security=DEBUG
+# Désactiver la sécurité pour certains tests si nécessaire
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
