--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -22,4 +22,5 @@ spring.flyway.baseline-on-migrate=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 ### JWT ###
-JWT_SECRET_KEY=${JWT_SECRET_KEY}
+jwt.secret=${JWT_SECRET_KEY}
+jwt.expiration=86400000
