--- a/frontend/backoffice/package.json
+++ b/frontend/backoffice/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.56.0",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
