edit specific modules

--- a/backend/api/pom.xml
+++ b/backend/api/pom.xml
@@ -98,6 +98,27 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Jackson Datatype for Hibernate 5 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+        </dependency>
+
+        <!-- Jakarta Persistence API pour Spring Boot 3+ -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- javax.persistence pour compatibilité runtime (problème de NoClassDefFoundError) -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Tests -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
