--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.servlet.multipart.max-request-size=10MB
 ### JWT ###
 jwt.secret=${JWT_SECRET_KEY}
 jwt.expiration=86400000
+### HelloAsso ###
+helloasso.client-id=${HELLOASSO_CLIENT_ID}
+helloasso.client-secret=${HELLOASSO_CLIENT_SECRET}
+helloasso.api-url=https://api.helloasso.com
