--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -28,3 +28,6 @@ jwt.expiration=86400000
 helloasso.client-id=${HELLOASSO_CLIENT_ID}
 helloasso.client-secret=${HELLOASSO_CLIENT_SECRET}
 helloasso.api-url=https://api.helloasso.com
+### Logging ###
+logging.level.root=INFO
+logging.level.com.stemadeleine=INFO
